--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <script src="тест.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor="black">
-    <p align="Center">Celldweller</p>
-  <div class="line1"><img src="https://yt3.googleusercontent.com/h3DCQI_qMbW4VkYWOnsBMbVOd4CnnSoXApTt14Ql4o2Mf5Ol5aqqwn43sjT_DQFUiq76_g-UDw=s900-c-k-c0x00ffffff-no-rj" width="350" height="350">
-  <p class="p2"> Celldweller is an American electronic rock project by multi-musician Klayton.<br> 
-    Celldweller songs have been featured in many films, movie trailers, television shows and video games.<br>
-  </p>
+<body class="bodys">
+<div class="title">
+  <div class="title_block1"><a href="http://127.0.0.1:5500/index.html" class="link">KLAYTON</a></div>
+  <div class="title_block2">PROJECTS</div>
+  <div class="title_block3">AWARDS</div>
 
-<p class="p1">Klayton (Celldweller)</p>  
+</div>
+  <div class="line1">
+    <div class="line_img"><img src="https://i.scdn.co/image/ab6761610000e5eb8aef0ba190c5b7b65a07ccee" height="370px" width="370px"> </div>
+    <div class="font_inf_white"><span class="span_font_inf_white">Klayton Albert</span> (born Scott David Albert; June 17, 1969) is an American multi-instrumentalist from New York City who currently resides in Los Angeles, California. Klayton has led several bands and has performed under a variety of stage names since the early 1990s. His current projects are Celldweller, Scandroid and FreqGen.</div>
   </div>
 </body>
 </html>
