add drop-down boxes

--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bodys">
-<div class="title">
+<!-- <div class="title">
   <div class="title_block1"><a href="http://127.0.0.1:5500/index.html" class="link">KLAYTON</a></div>
   <div class="title_block2">PROJECTS</div>
   <div class="title_block3">AWARDS</div>
   <div class="title_block4">RANDOM TRACK</div>
-</div>
+</div> -->
+<nav>
+  <ul class="title">
+    <li class="title_block1"><a href="index.html">KLAYTON</a></li>
+    <li class="title_block2"><a href="index.html">PROJECTS</a>
+    <ul>
+      <li><a href="#">Circle Of Dust</a></li>
+      <li><a href="https://www.youtube.com/watch?v=rtbct2jzLBU" target="_blank">Celldweller</a></li>
+      <li><a href="#">Scandroid</a></li>
+      <li class="ul_ul_li"><a href="#">FreqGen</a></li>
+    </ul>
+    </li>
+    <li class="title_block3"><a href="index.html">TOP</a>
+      <ul>
+        <li><a href="#">Track</a></li>
+        <li><a href="https://www.youtube.com/watch?v=rtbct2jzLBU" target="_blank">Album</a></li>
+        <li><a href="#">Project</a></li>
+      </ul>
+    </li>
+    <li class="title_block4"><a href="index.html">RANDOM ALBUM</a></li>
+  </ul>
+</nav>
   <div class="line1">
     <div class="line_img"><img src="https://i.scdn.co/image/ab6761610000e5eb8aef0ba190c5b7b65a07ccee" height="320px" width="320px"> </div>
     <div  class="font_inf_white"><p class="paragraph"><span class="span_font_inf_white">Klayton Albert</span> (born Scott David Albert; June 17, 1969) is an American multi-instrumentalist from New York City who currently resides in Los Angeles, California. Klayton has led several bands and has performed under a variety of stage names since the early 1990s. His current projects are Celldweller, Scandroid and FreqGen.</p>
@@ -34,8 +55,6 @@
   In his teenage years, Albert listened to a lot of metal, only later being introduced to electronic music through bands such as Depeche Mode and Skinny Puppy. All of these would influence Klayton's musical output in the early and mid 1990s, as he melded heavy guitars with layered samples and synths in the handful of industrial metal bands that he formed. In later years, Klayton has referenced European drum'n'bass and Goa/psychedelic trance as influential on the sound of his project Celldweller.
   Klayton has stated repeatedly that he is a fan of Godzilla and the Kaiju genre in general. In an interview with Bloody Disgusting, Klayton said that David Fincher's audio commentary on the films Seven and Fight Club have inspired him to record his own audio commentaries for his Beta Cession releases for Wish Upon a Blackstar.
 </div>
-
-
 </div>
 
 </body>
