--- a/index.html
+++ b/index.html
@@ -9,19 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bodys">
-<!-- <div class="title">
-  <div class="title_block1"><a href="http://127.0.0.1:5500/index.html" class="link">KLAYTON</a></div>
-  <div class="title_block2">PROJECTS</div>
-  <div class="title_block3">AWARDS</div>
-  <div class="title_block4">RANDOM TRACK</div>
-</div> -->
 <nav>
   <ul class="title">
     <li class="title_block1"><a href="index.html">KLAYTON</a></li>
     <li class="title_block2"><a href="index.html">PROJECTS</a>
     <ul>
-      <li><a href="#">Circle Of Dust</a></li>
-      <li><a href="https://www.youtube.com/watch?v=rtbct2jzLBU" target="_blank">Celldweller</a></li>
+      <li><a href="circle_of_dust.html">Circle Of Dust</a></li>
+      <li><a href="Celldweller.html">Celldweller</a></li>
       <li><a href="#">Scandroid</a></li>
       <li class="ul_ul_li"><a href="#">FreqGen</a></li>
     </ul>
@@ -45,7 +39,7 @@
 <div class="line2">
 <div class="plife">Personal Life</div>
 <div class="bline_img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Celldweller_Day_1_%28cropped%29.jpg/220px-Celldweller_Day_1_%28cropped%29.jpg" height="313px" width="200px "></div>
-<div class="font_inf_red">
+<div class="font_inf_red_main">
   Albert grew up in an Italian-American conservative Christian household in New York, where he attended church with his younger brother Dan and friends Buka and Klank.
   He graduated from Farmingdale High School.
   He took one semester of music theory in college but dropped out, explaining that "all they wanted to tell me is what I could and couldn't do according to the laws of music and I couldn't have cared less."
@@ -54,6 +48,11 @@
 <div class="font_inf_red2">
   In his teenage years, Albert listened to a lot of metal, only later being introduced to electronic music through bands such as Depeche Mode and Skinny Puppy. All of these would influence Klayton's musical output in the early and mid 1990s, as he melded heavy guitars with layered samples and synths in the handful of industrial metal bands that he formed. In later years, Klayton has referenced European drum'n'bass and Goa/psychedelic trance as influential on the sound of his project Celldweller.
   Klayton has stated repeatedly that he is a fan of Godzilla and the Kaiju genre in general. In an interview with Bloody Disgusting, Klayton said that David Fincher's audio commentary on the films Seven and Fight Club have inspired him to record his own audio commentaries for his Beta Cession releases for Wish Upon a Blackstar.
+</div>
+<hr class="hr">
+<div class="Madeinchina">
+Made by Stopapupa
+
 </div>
 </div>
 
