add Scandroid and FreqGen and Randomizer pages

--- a/circle_of_dust.html
+++ b/circle_of_dust.html
@@ -16,8 +16,8 @@
     <ul>
       <li><a href="circle_of_dust.html">Circle Of Dust</a></li>
       <li><a href="Celldweller.html">Celldweller</a></li>
-      <li><a href="#">Scandroid</a></li>
-      <li class="ul_ul_li"><a href="#">FreqGen</a></li>
+      <li><a href="Scandroid.html">Scandroid</a></li>
+      <li><a href="FreqGen.html">FreqGen</a></li>
     </ul>
     </li>
     <li class="title_block3"><a href="index.html">TOP</a>
@@ -27,7 +27,7 @@
         <li><a href="#">Project</a></li>
       </ul>
     </li>
-    <li class="title_block4"><a href="index.html">RANDOM ALBUM</a></li>
+    <li class="title_block4"><a href="randomizer.html">RANDOM ALBUM</a></li>
   </ul>
 </nav>
   <div class="line1">
