make track randomizer

--- a/Arandomizer.html
+++ b/Arandomizer.html
@@ -27,13 +27,13 @@
         <li><a href="#">Project</a></li>
       </ul>
     </li>
-    <li class="title_block4"><a href="index.html">RANDOM ALBUM</a></li>
+    <li class="title_block4"><a href="Arandomizer.html">RANDOM ALBUM</a></li>
   </ul>
 </nav>
   <div class="line1">
 
 <button type="button" class="butt"> ЕПТА!</button>
-<div class="click"></div>
+<div class="click" id="Click"></div>
 
 </div>
 <div class="line2">
