--- a/Celldweller.html
+++ b/Celldweller.html
@@ -27,7 +27,7 @@
         <li><a href="#">Project</a></li>
       </ul>
     </li>
-    <li class="title_block4"><a href="randomizer.html">RANDOM ALBUM</a></li>
+    <li class="title_block4"><a href="Arandomizer.html">RANDOM ALBUM</a></li>
   </ul>
 </nav>
   <div class="line1_cell">
