almost working history

--- a/.vscode/Arandomizer.html
+++ b/.vscode/Arandomizer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Akak.js"></script>
+    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bodys">
@@ -30,10 +30,10 @@
     <li class="title_block4"><a href="Arandomizer.html">RANDOM ALBUM</a></li>
   </ul>
 </nav>
-  <div class="line1">
+  <div class="lineRandom" id="RandomId">
 
-<button type="button" class="butt"> ЕПТА!</button>
-<div class="click" id="Click"></div>
+<button type="button" class="butt" id="button_1"> GET TRACK!</button>
+
 
 </div>
 <div class="line2">
@@ -43,6 +43,6 @@ Made by Stopapupa
 
 </div>
 </div>
-
+<script src="Akak.js"></script>
 </body>
 </html>
