--- a/.vscode/Scandroid.html
+++ b/.vscode/Scandroid.html
@@ -22,9 +22,8 @@
     </li>
     <li class="title_block3"><a href="index.html">TOP</a>
       <ul>
-        <li><a href="circle_of_dust.html">Track</a></li>
-        <li><a href="">Album</a></li>
-        <li class="uul"><a href="#">Project</a></li>
+        <li><a href="topTrack.html">Track</a></li>
+        <li><a href="topAlbum.html">Album</a></li>
       </ul>
     </li>
     <li class="title_block4"><a href="index.html">RANDOM ALBUM</a></li>
