--- a/.vscode/topAlbum.html
+++ b/.vscode/topAlbum.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="тест.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bodys">
@@ -29,19 +29,29 @@
     <li class="title_block4"><a href="Arandomizer.html">RANDOM ALBUM</a></li>
   </ul>
 </nav>
-  <div class="lineRandom" id="RandomId">
-
-<button type="button" class="butt" id="button_1"> GET TRACK!</button>
-
-
+  <div class="lineTopTrack">
+    <h1>TOP ALBUMS:</h1>
+   <ol>
+    <li>Celldweller - Celldweller(Deluxe edition)</li>
+    <li>Scandroid - Scandroid(Deluxe edition)</li>
+    <li>Scandroid - The Darkness and The Light</li>
+    <li>Celldweller - Offworld(Deluxe edition)</li>
+    <li>Celldweller - End of an Empire(Deluxe edition)</li>
+    <li>Celldweller - Satellites</li>
+    <li>Scandroid - Monochrome(Deluxe edition)</li>
+    <li>Celldweller - Soundtrack For The Voices In My Head Vol.02</li>
+    <li>Celldweller - Soundtrack For The Voices In My Head Vol.03</li>
+    <li>Celldweller - Wish Upon A Blackstar(Deluxe edition)</li>
+   </ol>
 </div>
 <div class="lineR">
+
 <hr class="hr">
 <div class="Madeinchina">
 Made by Stopapupa
 
 </div>
 </div>
-<script src="Akak.js"></script>
+
 </body>
 </html>
