--- a/.vscode/topTrack.html
+++ b/.vscode/topTrack.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="тест.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bodys">
@@ -29,19 +29,29 @@
     <li class="title_block4"><a href="Arandomizer.html">RANDOM ALBUM</a></li>
   </ul>
 </nav>
-  <div class="lineRandom" id="RandomId">
-
-<button type="button" class="butt" id="button_1"> GET TRACK!</button>
-
-
+  <div class="lineTopTrack">
+    <h1>TOP TRACK:</h1>
+   <ol>
+    <li>Celldweller - Too Many Tears</li>
+    <li>Celldweller - Uncrowned</li>
+    <li>Celldweller - One Good Reason</li>
+    <li>Celldweller - Switchback</li>
+    <li>Scandroid - Empty Streets</li>
+    <li>Celldweller - Good Luck</li>
+    <li>Scandroid - Connection</li>
+    <li>Celldweller - Own Little World</li>
+    <li>Celldweller - Shapeshifter</li>
+    <li>Celldweller - Senorita Bonita</li>
+   </ol>
 </div>
 <div class="lineR">
+
 <hr class="hr">
 <div class="Madeinchina">
 Made by Stopapupa
 
 </div>
 </div>
-<script src="Akak.js"></script>
+
 </body>
 </html>
