--- a/.vscode/Scandroid.html
+++ b/.vscode/Scandroid.html
@@ -26,7 +26,7 @@
         <li><a href="topAlbum.html">Album</a></li>
       </ul>
     </li>
-    <li class="title_block4"><a href="index.html">RANDOM ALBUM</a></li>
+    <li class="title_block4"><a href="index.html">RANDOM TRACK</a></li>
   </ul>
 </nav>
   <div class="line1">
